Fixed bug where when no results were given on ingredient search, the filter position would shift.

--- a/src/globals.css
+++ b/src/globals.css
@@ -2,6 +2,7 @@
 
 :root {
   --navbar-height: 64px; /* Navbar also has a 1rem bottom margin */
+  --w-page-min: 360px;
 
   --background: #ffffff;
   --foreground: #171717;
@@ -67,4 +68,8 @@ body {
 .neg {
   background: var(--color-neg);
   color: white;
+}
+
+.w-page-min{
+  width: var(--w-page-min);
 }
